unpackaged/main/default/objects/Captivated_Event__e/Captivated_Event__e.object-meta.xml
<CustomObject>
    <label>Captivated Event</label>
    <pluralLabel>Captivated Events</pluralLabel>
</CustomObject>