unpackaged/main/default/objects/Captivated_Event__e/fields/Booth_Id__c.field-meta.xml
<CustomField>
    <fullName>Booth_Id__c</fullName>
    <label>Booth Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>