unpackaged/main/default/objects/Captivated_Event__e/fields/Breakdown_Location__c.field-meta.xml
<CustomField>
    <fullName>Breakdown_Location__c</fullName>
    <label>Breakdown Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>