unpackaged/main/default/objects/Captivated_Event__e/fields/Driver_Id__c.field-meta.xml
<CustomField>
    <fullName>Driver_Id__c</fullName>
    <label>Driver Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>