unpackaged/main/default/objects/Captivated_Event__e/fields/Facility_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Display_Name__c</fullName>
    <label>Facility Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>