unpackaged/main/default/objects/Captivated_Event__e/fields/Fleet_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Fleet_Indicator__c</fullName>
    <label>Fleet Indicator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>