unpackaged/main/default/objects/Captivated_Event__e/fields/Member_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Member_Last_Name__c</fullName>
    <label>Member Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>