unpackaged/main/default/objects/Captivated_Event__e/fields/Member_Phone__c.field-meta.xml
<CustomField>
    <fullName>Member_Phone__c</fullName>
    <label>Member Phone</label>
    <length>12</length>
    <type>Text</type>
</CustomField>