unpackaged/main/default/objects/Captivated_Event__e/fields/Priority_Code__c.field-meta.xml
<CustomField>
    <fullName>Priority_Code__c</fullName>
    <label>Priority Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>