unpackaged/main/default/objects/Captivated_Event__e/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>