unpackaged/main/default/objects/Captivated_Event__e/fields/Status_Reason_CD__c.field-meta.xml
<CustomField>
    <fullName>Status_Reason_CD__c</fullName>
    <label>Status Reason CD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>