unpackaged/main/default/objects/Captivated_Event__e/fields/Truck_Id__c.field-meta.xml
<CustomField>
    <fullName>Truck_Id__c</fullName>
    <label>Truck Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>